app/assets/sass/application.scss
// global styles for <a> and <p> tags
$govuk-global-styles: true;

// We can't mount GOV.UK Frontend's assets at root as it's done automatically by the extensions framework.
$govuk-assets-path: '/govuk/assets/';

// Import GOV.UK Frontend and any extension styles if extensions have been configured
@import "lib/extensions/extensions";

// Patterns that aren't in Frontend
@import "patterns/step-by-step-header";
@import "patterns/step-by-step-nav";
@import "patterns/step-by-step-related";
@import "patterns/task-list";
@import "patterns/related-items";

// Components that aren't in Frontend
@import "components/cookie-banner";

// Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you

//Styles for account bar

ul#navigation {
  border-bottom: 1px solid $govuk-border-colour;
  font-size: 0.9em;
  margin: 0 0 1em;
  padding: 0.8em 0;
  text-align: right;

  li {
    display: inline;
    padding: 0 0 0 1.5em;
    font-family: 'nta', Arial;
    font-size: 16px;
    overflow-wrap: break-word;
  }
}

a.usability-link {
  color: #b1b4b6;
  float:right;
  &:visited{
  color: #b1b4b6;
  }
}

